--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,12 @@ html, body{
   padding: 0;
   margin: 0;
   font-size: 10pt;
+  color: #6B7363;
 }
 
 header{
   text-align: center;
-  background-color: gray;
+  background-color: #2A3140;
   padding: 0.5vh;
   height: 6vh;
   display: flex;
@@ -18,9 +19,10 @@ header > h1{
 }
 
 main{
-  background-color: #aaaad6;
+  background-color: #D9D8C7;
   height: 87vh;
   padding: 3vh;
+  color: #2A3140;
 }
 p{
   margin: 0;
@@ -29,10 +31,13 @@ p{
 #etch-a-sketch{
   position: relative;
   height: 700px;
-  background-color: #cc4b4b;
+  /* background-color: #cc4b4b; */
+  background-color: #D93240;
+  color: #2A3140;
   width: 700px;
   margin: auto;
   border-radius: 15px;
+  box-shadow: 0px 2px 5px 1px;
 }
 
 .container {
@@ -43,6 +48,7 @@ p{
   width: 600px;
   margin: auto;
   display: grid;
+  box-shadow: 0px 2px 5px 1px;
 }
 
 .container > div {
@@ -52,11 +58,18 @@ p{
 
 .knob{
   background-color: #d0bdbd;
-  height: 50px;
-  width: 50px;
+  height: 45px;
+  width: 45px;
   position: absolute;
   bottom: 10px;
-  border-radius: 25px;
+  border-radius: 50%;
+  -webkit-transition: all 2s;
+  -o-transition: all 2s;
+  transition: all 2s;
+  box-shadow: 0px 2px 5px 1px;
+  transform: translateY(-3px);
+  font-size: 9pt;
+  font-weight: bold;
 }
 
 .knob-left{
@@ -65,4 +78,73 @@ p{
 
 .knob-right{
   right: 25px;
+}
+
+.mark{
+  width: 50%;
+  height: 2px;
+  top: 50%;
+  border-radius: 50%;
+  transform-origin: 100%;
+  position: absolute;
+  background-color: black;
+  -webkit-transition: all 2s;
+  -o-transition: all 2s;
+  transition: all 2s;
+
+}
+
+.face-left {
+  transform: rotate(30deg);
+}
+
+.face-right {
+  transform: rotate(150deg);
+}
+
+.leftText {
+  position: absolute;
+  left: -25px;
+  top: -10px;
+}
+
+.rightText {
+  position: absolute;
+  left: 40px;
+  top: -10px;
+}
+
+#info {
+  margin-top: 10px;
+  text-align: center;
+}
+
+#info > h2{ margin-bottom: 5px;}
+
+#info > div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+#info > div > label{
+  padding-right: 5px;
+}
+
+button {
+  padding: 1em;
+  border: 1px solid #2A3140;
+  background-color: #6B7363;
+  transition: all 0.1s;
+}
+
+button:focus {
+  background-color: #D93240;
+  border-width: 3px;
+  outline: 0;
+}
+
+#clear {
+  margin-left: 25px;
 }
